RPP: fix scrollbar when viewing timeline summary
R=dsv@chromium.org

Bug: none
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6791950
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Danil Somsikov <dsv@chromium.org>

--- a/front_end/panels/timeline/timelineDetailsView.css
+++ b/front_end/panels/timeline/timelineDetailsView.css
@@ -52,8 +52,8 @@
 }
 
 .timeline-details-range-summary {
+  padding: var(--sys-size-4) 0 0;
   height: 100%;
-  margin: var(--sys-size-4) 0 0;
 
   & > devtools-performance-timeline-summary {
     /* The category summary can't be more narrow than this, so we'll force a horizontal scrollbar
